@@ -2,15 +2,20 @@ fix/ownership
 =============
 
 .. dfhack-tool::
-    :summary: Fixes instances of units claiming the same item or an item they don't own.
-    :tags: fort bugfix units
+    :summary: Fixes ownership links.
+    :tags: fort bugfix items units
 
-Due to a bug a unit can believe they own an item when they actually do not.
+Due to a bug, a unit can believe they own an item when they actually do not.
+Additionally, a room can remember that it is owned by a unit, but the unit can
+forget that they own the room.
 
-When enabled in `gui/control-panel`, `fix/ownership` will run once a day to check citizens and residents and make sure they don't
-mistakenly own an item they shouldn't.
+Invalid item ownership links result in units getting stuck in a "Store owned
+item" job. Missing room ownership links result in rooms becoming unused by the
+nominal owner and unclaimable by any other unit. In particular, nobles and
+administrators will not recognize that their room requirements are met.
 
-This should help issues of units getting stuck in a "Store owned item" job.
+When enabled in `gui/control-panel`, `fix/ownership` will run once a day to
+validate and fix ownership links for items and rooms.
 
 Usage
 -----
